5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1601_1800.log
== TEST (2019-03-20 18:08:46) 
-- CODE:
a=5
b=2
c=3
quoc((a**a)+(b**b)+(c**c))
div(a+b+c)
print(round(quoc/div,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quoc((a**a)+(b**b)+(c**c))
NameError: name 'quoc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:09:09) 
-- CODE:
a=5
b=2
c=3
quoci((a**a)+(b**b)+(c**c))
div(a+b+c)
print(round(quoci/div,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quoci((a**a)+(b**b)+(c**c))
NameError: name 'quoci' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:09:28) 
-- CODE:
a=5
b=2
c=3
sup((a**a)+(b**b)+(c**c))
div(a+b+c)
print(round(sup/div,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    sup((a**a)+(b**b)+(c**c))
NameError: name 'sup' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:09:51) 
-- CODE:
a=5
b=2
c=3
_dep((a**a)+(b**b)+(c**c))
div(a+b+c)
print(round(_dep/div,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    _dep((a**a)+(b**b)+(c**c))
NameError: name '_dep' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:05:49) 
-- CODE:
input=(int("Digite um número:"))
input=(int("Digite outro número:"))
input=(int("Digite mais um número:"))

a=5
b=2
c=3
quoc()
div(a+b+c)
print(round(_dep/div,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input=(int("Digite um número:"))
ValueError: invalid literal for int() with base 10: 'Digite um número:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:06:04) 
-- CODE:
input=int("Digite um número:"))
input=int("Digite outro número:"))
input=int("Digite mais um número:"))

a=5
b=2
c=3
quoc()
div(a+b+c)
print(round(_dep/div,6))
		
-- ERROR:
File "XXXX", line 1
    input=int("Digite um número:"))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:23:27) 
-- CODE:
input=int("Digite um número:"))
input=int("Digite outro número:"))
input=int("Digite mais um número:"))

a=5
b=2
c=3
quoc()
div(a+b+c)
print(round(_dep/div,6))
		
-- ERROR:
File "XXXX", line 1
    input=int("Digite um número:"))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:23:29) 
-- CODE:
input=int("Digite um número:"))
input=int("Digite outro número:"))
input=int("Digite mais um número:"))

a=5
b=2
c=3
quoc()
div(a+b+c)
print(round(_dep/div,6))
		
-- ERROR:
File "XXXX", line 1
    input=int("Digite um número:"))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:03) 
-- CODE:
numA = int(input"A:")
a=5
b=2
c=3
quoc()
div(a+b+c)
print(round(_dep/div,6))
		
-- ERROR:
File "XXXX", line 1
    numA = int(input"A:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:14) 
-- CODE:
numA = int(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numA = int(input"A:")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:29) 
-- CODE:
num_A = int(input"A:")
		
-- ERROR:
File "XXXX", line 1
    num_A = int(input"A:")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:38) 
-- CODE:
num_A = input"A:"
		
-- ERROR:
File "XXXX", line 1
    num_A = input"A:"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:54) 
-- CODE:
num_A = (input"A:")
		
-- ERROR:
File "XXXX", line 1
    num_A = (input"A:")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:57) 
-- CODE:
num_A = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    num_A = float(input"A:")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:24:59) 
-- CODE:
num_A = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    num_A = float(input"A:")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:11) 
-- CODE:
numberA = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:12) 
-- CODE:
numberA = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:12) 
-- CODE:
numberA = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:12) 
-- CODE:
numberA = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:13) 
-- CODE:
numberA = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:25:13) 
-- CODE:
numberA = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:26:17) 
-- CODE:
numberA = float(input"A:")
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:27:05) 
-- CODE:
numberA = float(input("A:"))
		
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:28:04) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = (numberA**numberA)+(numberB**numberB)+(numberC**numberC)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:28:28) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = (numberA**numberA)+(numberB**numberB)+(numberC**numberC)

print = (quoc)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:28:36) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = (numberA**numberA)+(numberB**numberB)+(numberC**numberC)

print = quoc
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:29:00) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = (numberA**numberA)+(numberB**numberB)+(numberC**numberC)

print = round(quoc,6)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:29:03) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = (numberA**numberA)+(numberB**numberB)+(numberC**numberC)

print = round(quoc,6)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:29:09) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = (numberA**numberA)+(numberB**numberB)+(numberC**numberC)
print = round(quoc,6)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:29:19) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
print = round(quoc,6)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:29:49) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print = round(quoc/div,6)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:29:55) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print = round(quoc/div,6)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:30:02) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print = round(quoc/div,6)
-- ERROR:
File "XXXX", line 1
    numberA = float(input"A:")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:31:00) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print(round(quoc/div,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:31:47) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:31:55) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,7))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:31:59) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,7))
-- EXECUTION TIME:
0.290963
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661965e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:03) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,6))
-- EXECUTION TIME:
0.125284
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661965e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:05) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,6))
-- EXECUTION TIME:
0.1947
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661965e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:06) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,6))
-- EXECUTION TIME:
0.206902
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.745215095779558e+42
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:06) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,6))
-- EXECUTION TIME:
0.173263
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661965e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:06) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,6))
-- EXECUTION TIME:
0.0996418
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.745215095779558e+42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:06) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc/div,6))
-- EXECUTION TIME:
0.103295
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661965e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:15) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc//div,6))
-- EXECUTION TIME:
0.152479
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661965e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:16) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc//div,6))
-- EXECUTION TIME:
0.111111
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.745215095779558e+42
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
1.4976614970661965e+247
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:16) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
print(round(quoc//div,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:30) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print(round(quoc/div,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:32) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print(round(quoc/div,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:32) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print(round(quoc/div,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:33) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = (numberA+numberB+numberC)
print(round(quoc/div,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:33:21) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**numberA)+(numberB**numberB)+(numberC**numberC))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- OUTPUT:
2.745215095779558e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:33:39) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:33:43) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:47) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.138784
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:48) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.170579
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:53) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = (numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.190354
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:54) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = (numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.178792
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:54) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = (numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.142085
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
106.150943
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:56) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.160817
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:57) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.24603
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:57) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.120708
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
25.666667
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
342.86802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:58) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,6))
-- EXECUTION TIME:
0.198513
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
106.150943
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:34:14) 
-- CODE:
numberA = float(input("A:"))
numberB = float(input("B:"))
numberC = float(input("C:"))
quoc = ((numberA**2)+(numberB**2)+(numberC**2))
div = int(numberA+numberB+numberC)
result = quoc/div
print(round(result,7))
-- EXECUTION TIME:
0.123609
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
